# software-engineering-project

./: .gitignore  README.md  package-lock.json  posts.py  pyproject.toml  serve.py  tables.py  types.py  utils.py
cscenv/: pyvenv.cfg
cscenv/Scripts/: activate  activate.bat
routes/: Pseudocode.txt  balance.py  jobs.py  payments  posts.py  reports.py  search.py  users.py
utils/: Pseudocode.txt  balance.py  common.py  jobs.py  posts.py  tables.py  users.py
