[project]
name = ""
version = ""
description = ""
authors = [
    {name = "DUOLabs333", email = "dvdugo333@gmail.com"},
]
dependencies = [
    "flask>=3.0.0",
    "sqlalchemy>=2.0.22",
    "Flask-CORS>=4.0.0",
    "requests>=2.31.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

